--- a/Todo-list.html
+++ b/Todo-list.html
@@ -30,19 +30,19 @@
         <li
           class="list-group-item d-flex justify-content-between align-items-center"
         >
-          <span>play mariokart</span>
+          <span>Work out at Early Morning</span>
           <i class="far fa-trash-alt delete"></i>
         </li>
         <li
           class="list-group-item d-flex justify-content-between align-items-center"
         >
-          <span>defeat ganon in zelda</span>
+          <span>Dont forget your breakfast</span>
           <i class="far fa-trash-alt delete"></i>
         </li>
         <li
           class="list-group-item d-flex justify-content-between align-items-center"
         >
-          <span>make a veggie pie</span>
+          <span>Reached Office in time</span>
           <i class="far fa-trash-alt delete"></i>
         </li>
       </ul>
